--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,5 @@ config.py
 .vscode/
 manuscript/feedback_hanson.md
 manuscript/figures.tex
+manuscript/response-to-reviewers.md
+manuscript/response-to-reviewers.pdf
